# dbakel-vis

./: LICENSE.md  README.md  extract.py  pyproject.toml  visualise.py
tables/: Bridges.csv  Crossings.csv  Structures.csv  Switches.csv  Tracks.csv
